<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res/com.kpj4s.way2sms"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/llayout_edit_group"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_groupname" />

        <EditText
            android:id="@+id/etxt_groupname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_groupcontacts" />

        <MultiAutoCompleteTextView
            android:id="@+id/mactxtview_contactlist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_groupcontact"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:text="@string/button_contacts" />

            <Button
                android:id="@+id/button_groupsave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>